# splasher

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_arraysource.py
splasher/: __init__.py  cli.py  demo.py
splasher/adapters/: __init__.py  apairo_source.py
splasher/core/: __init__.py  accumulate.py  array_source.py  colormap.py  grid.py  io.py  labels.py  poses.py  projection.py  source.py  target.py
splasher/engine/: __init__.py  render.py  session.py  view_state.py
splasher/server/: __init__.py  app.py  desktop.py  files.py  protocol.py
splasher/ui/: __init__.py  app.py  channel_manager.py  cloud_view.py  grid_designer.py  grid_view.py  image_view.py  main_window.py  palette.py  timeline.py
splasher/web/: index.html  style.css
splasher/web/src/: api.js  app.js  colors.js  panels.js  resize.js
splasher/web/src/views/: cloud.js
tests/: test_accumulate.py  test_apairo_adapter.py  test_core.py  test_grid.py  test_io.py  test_labels_target.py  test_point_target.py  test_projection.py  test_protocol.py  test_server.py  test_session.py
web/: index.html  style.css
web/src/: api.js  app.js  panels.js
web/src/views/: bev.js  cameras.js  cloud.js
