[project]
name = "splasher"
version = "0.1.0"
description = "Labélisation : canaux synchronisés (nuages 3D, images) -> grille 2D BEV ou labels par point"
readme = "README.md"
authors = [{ name = "Augustin Bresset", email = "augustin.bresset@gmail.com" }]
requires-python = ">=3.11"
# Le cœur + le moteur ne dépendent que de numpy. Les fronts sont des extras.
dependencies = [
    "numpy",
]

# apairo n'est qu'UN adaptateur d'entrée optionnel — le cœur n'en dépend pas.
[project.optional-dependencies]
apairo = [
    "apairo @ git+https://github.com/apairo-robotics/apairo.git",
    "PyYAML",
]
# Serveur web + API (le moteur `splasher.engine` n'en dépend pas).
api = [
    "fastapi",
    "uvicorn",
]
# Desktop app: the web front inside a native webview (Spotify-style).
# pywebview[qt] pulls a pip-only Qt WebEngine (Chromium) backend so a real native
# window opens out of the box on Linux (no system GTK/WebKit packages needed).
app = [
    "fastapi",
    "uvicorn",
    "pywebview[qt]",
]

[project.scripts]
splasher = "splasher.cli:main"

[dependency-groups]
dev = ["pytest", "httpx"]  # httpx : requis par fastapi.testclient (tests API)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["splasher"]

[tool.hatch.metadata]
allow-direct-references = true
